Updated the CSS for the new login page to fix font sizes, alignment, and positioning, and to make the schedule area appear on mobile devices

--- a/www/extra-css/i3-login-default.css
+++ b/www/extra-css/i3-login-default.css
@@ -3,9 +3,11 @@
 body {
 	margin:0px;
 	padding:0px;
+	text-align:right;
 }
 
 .pane {
+	text-align:left;
 	position:absolute;
 	top:0px;
 	min-height:100%;
@@ -43,21 +45,30 @@ body {
 	text-align:center;
 	
 	z-index:2;
+	
+	font-size:120%;
 }
-#subPane table {
+#subPane #schedule div {
+	display:inline-block;
+	text-align:left;
+}
+#subPane #schedule table {
 	margin:auto;
 }
-#subPane table td {
+#subPane #schedule table td {
 	font-size:120%;
 	text-align:left;
 	padding-left:6px;
 }
-#subPane table td:first-child {
+#subPane #schedule table td:first-child {
 	text-align:right;
 	padding-right:6px;
 }
 #subPane ul {
+	display:inline-block;
 	text-align:left;
+	margin-left:-2em;
+	padding:0px;
 	list-style-type:none;
 }
 
@@ -104,14 +115,18 @@ body {
 		font-size:12pt;
 	}
 	#mainPane {
+		position:static;
 		width:100%;
+		min-height:0;
 		padding:0px 4px;
 	}
 	#mainPane input {
 		width:96%;
 	}
 	#subPane {
-		display:none;
+		position:static;
+		width:100%;
+		min-height:0;
 	}
 	#logo {
 		padding-left:32px;
